codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────╮
│  >_ Codex-Plus (v0.0.0-fork)                  │
│                                            │
│ Visit https://chatgpt.com/codex/settings/  │
│ usage for up-to-date                       │
│ information on rate limits and credits     │
│                                            │
│  Model:            gpt-5-codex (reasoning  │
│  Directory: [[workspace]]                  │
│  Approval:         on-request              │
│  Sandbox:          read-only               │
│  Agents.md:        <none>                  │
│                                            │
│  Token usage:      1.9K total  (1K input + │
│  Context window:   100% left (2.25K used / │
│  5h limit:         [██████░░░░░░░░░░░░░░]  │
│                    (resets 03:14)          │
╰────────────────────────────────────────────╯
